bk_ida/gccida/g1/convert_to_integer
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:585:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:586:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:587:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:589:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v11; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:592:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:593:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:595:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:605:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:608:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:609:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:610:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:611:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:612:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:613:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:614:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:617:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:618:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v40; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:619:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/convert.c:773:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( type->block.abstract_origin) >> 1), 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_to_integer/src/obj/convert.o] Error 1
